# test_pybind11

./: .gitignore  CMakeLists.txt  CalculatingPi.cpp  CalculatingPi.h  CalculatingPi_gpu.cu  CalculatingPi_gpu.cuh  Makefile  README.md  README_es.md  SieveOfEratosthenes.cpp  SieveOfEratosthenes.h  jobs_fifo_queue.h  main.py  test_pybind11.cpp  thread_pool.h  utils.cpp  utils.h
